--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,10 +1,19 @@
 <body>
-    <div id="wrapper">
-      <h1>Note Scraper</h1>
-      <h2><i>If you can do this...the homework should be no problem.</i></h2>
-      <div id="articles"></div>
-      <div id="notes"></div>
+    <div class="container">
+        <div id="wrapper">
+        <h1>News Scraper</h1>
+        {{!-- <h2><i>If you can do this...the homework should be no problem.</i></h2> --}}
+        <div class="news-container row">
+            <div id="articles" class="half-container col"></div>
+            <div id="notes" class="half-container col"></div>
+        </div>
+        </div>
     </div>
+
+
+
+
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="app.js"></script>
   </body>
